syntax = "proto3";

package protomeal;

option go_package = "github.com/mookrob/servicemeal";

service Meal {
    rpc GetUserFavMeal (GetUserFavMealRequest) returns (stream MealItem) {}
}

message Empty{}

message GetUserFavMealRequest {
    string id=1;
}

message MealItem {
    string id = 1;
    string name = 2;
    double energy = 3;
    double protein = 4;
    double carbohydrate = 5;
    double fat = 6;
    double sodium = 7;
    double cholesterol = 8;
}
